# Virtual-Assistant

./: CMakeLists.txt  sdkconfig  sdkconfig.old
Server/: analys.py  logs.xlsx  server.py
Sever/: host_sever.py  sever.py
components/audio/: CMakeLists.txt  audio.c
components/audio/include/: audio.h
components/helix_mp3_decoder/: CMakeLists.txt
components/i2s_audio/: CMakeLists.txt  i2s_audio.c
components/i2s_audio/include/: i2s_audio.h
components/sd_card/: CMakeLists.txt  sd_card.c
components/sd_card/include/: sd_card.h
components/speech_to_text/: CMakeLists.txt  speech_to_text.c
components/speech_to_text/include/: speech_to_text.h
components/text_to_speech/: CMakeLists.txt  text_to_speech.c
components/text_to_speech/include/: text_to_speech.h
components/wifi/: CMakeLists.txt  wifi.c
components/wifi/include/: wifi.h
main/: CMakeLists.txt  main.c
